@@ -1,3 +1,8 @@
+2001-06-04  Ezra Peisach  <epeisach@mit.edu>
+
+	* krlogin.c: Always provide prototype for setsignal and not if
+	__STDC__ is defined.
+
 2001-06-01  Ezra Peisach  <epeisach@mit.edu>
 
 	* login.c: Add braces around initializers. Cleanup assignments in
